working on responsive feature

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
     
                     <label for="textarea" class="input-box label-phone">
                         Algum assunto?
-                        <textarea name="" id="textarea" cols="30" rows="10"></textarea>
+                        <textarea id="textarea" cols="30" rows="10"></textarea>
                     </label>
                 </div>
             </form>
