creating a new features

--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     
                     <label for="phone" class="input-box label-phone">
                         Telefone:
-                        <input type="Number" placeholder="Telefone">
+                        <input type="text" placeholder="Telefone">
                     </label>
                 </div>
 
