fizing more responsive features

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
                     <label for="services" class="input-box label-phone">
                         <span class="select-title">Type of Service:</span>
                         <select name="" id="services">
+                            <option value="" selected>---- select your option ----</option>
                             <option value="cabelo">Only Haircut</option>
                             <option value="cabelo e barba">Haircut and Beard</option>
                             <option value="barba">Only Beard</option>
