focus on location section

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
                         <img src="image/map-img1.png" alt="localização">
                     </div>
                     <div class="text">
-                        <span>Location</span>
+                        <span>Location</span> <br />
                         <span>Matrix Avenue, 33</span>
                     </div>
                 </div>
@@ -242,7 +242,7 @@
                         <img src="image/map-img2.png" alt="localização">
                     </div>
                     <div class="text">
-                        <span>Phone</span>
+                        <span>Phone</span> <br />
                         <span>(11) 9999-9999</span>
                     </div>
                 </div>
@@ -251,7 +251,7 @@
                         <img src="image/map-img3.png" alt="localização">
                     </div>
                     <div class="text">
-                        <span>E-mail</span>
+                        <span>E-mail</span> <br />
                         <span>contato@barbershop.com</span>
                     </div>
                 </div>
@@ -260,7 +260,7 @@
                         <img src="image/map-img4.png" alt="localização">
                     </div>
                     <div class="text">
-                        <span>Time</span>
+                        <span>Time</span> <br />
                         <span>Monday to Friday - 9AM às 17AM</span>
                     </div>
                 </div>
